--- a/src/KursovaRabota/KursovaRabota/Views/Home/Index.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+﻿<link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
+<body>
+    <div class="items">
+        <h1 class="text-container">УчебниСъстезания</h1>
+    </div>
+</body>
