--- a/src/KursovaRabota/KursovaRabota/wwwroot/css/site.css
+++ b/src/KursovaRabota/KursovaRabota/wwwroot/css/site.css
@@ -99,7 +99,8 @@ body {
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
-    background-color: var(--bs-body-bg);
+    background: rgb(174,238,209);
+    background: radial-gradient(circle, rgba(174,238,209,1) 0%, rgba(148,187,233,1) 100%);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -249,19 +250,6 @@ sup {
     top: -0.5em;
 }
 
-a {
-    color: var(--bs-link-color);
-    text-decoration: underline;
-}
-
-    a:hover {
-        color: var(--bs-link-hover-color);
-    }
-
-    a:not([href]):not([class]), a:not([href]):not([class]):hover {
-        color: inherit;
-        text-decoration: none;
-    }
 
 pre,
 code,
@@ -289,10 +277,6 @@ code {
     font-size: 0.875em;
     color: var(--bs-code-color);
     word-wrap: break-word;
-}
-
-a > code {
-    color: inherit;
 }
 
 kbd {
@@ -609,14 +593,12 @@ progress {
     }
 
 .blockquote-footer {
-    margin-top: -1rem;
-    margin-bottom: 1rem;
     font-size: 0.875em;
     color: #6c757d;
 }
 
     .blockquote-footer::before {
-        content: "— ";
+        content: "ï¿½ï¿½";
     }
 
 .img-fluid {
@@ -12650,10 +12632,9 @@ html {
 }
 
 .footer {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    background-color: #2c3e50;
-    color: #fff;
+    
+    background-color: white;
+    color: black;
 }
 
 .copyright {
