--- a/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
+++ b/src/KursovaRabota/KursovaRabota/Views/User/GetAllUnregistered.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div style="display:flex; flex-direction: column" class="form-group">
-            <label for="Subject">Сортиране по дата:</label>
+            <label for="Subject">Сортиране по име:</label>
             <select id="subjectDropdown" asp-for="SortByName" class="form-control">
                 <option value=true>Сортиране в низходящ ред</option>
                 <option value=false>Сортиране във възходящ ред</option>
